jasn/examples/invalid/trailing_underscore.jasn
// Trailing underscores in numbers are forbidden
{
  bad_number: 1000_
}
